--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -29756,3 +29756,198 @@ msgstr ""
 
 msgid "Show public link"
 msgstr ""
+
+msgid "Public link"
+msgstr ""
+
+msgid "You can share or copy this link:"
+msgstr ""
+
+msgid "Select the link above and press Ctrl+C to copy it"
+msgstr ""
+
+msgid "New page"
+msgstr ""
+
+msgid "Pages deleted"
+msgstr ""
+
+msgid "Export glossary"
+msgstr ""
+
+msgid "Export to Documents"
+msgstr ""
+
+msgid "Could not delete term"
+msgstr ""
+
+msgid "Exported to documents"
+msgstr ""
+
+msgid "Could not export to documents"
+msgstr ""
+
+msgid "Could not fetch glossary terms"
+msgstr ""
+
+msgid "Edit glossary term"
+msgstr ""
+
+msgid "Edit page layout"
+msgstr ""
+
+msgid "e.g. /index.php"
+msgstr ""
+
+msgid "URL is required"
+msgstr ""
+
+msgid "Optional - e.g. ROLE_TEACHER"
+msgstr ""
+
+msgid "Layout template"
+msgstr ""
+
+msgid "Loading templates..."
+msgstr ""
+
+msgid "Select a template"
+msgstr ""
+
+msgid "Layout templates"
+msgstr ""
+
+msgid "Create template"
+msgstr ""
+
+msgid "Back to layouts"
+msgstr ""
+
+msgid "ID"
+msgstr ""
+
+msgid "Columns"
+msgstr ""
+
+msgid "Blocks"
+msgstr ""
+
+msgid "View JSON"
+msgstr ""
+
+msgid "Layout JSON details"
+msgstr ""
+
+msgid "Confirm deletion"
+msgstr ""
+
+msgid "Are you sure you want to delete this template?"
+msgstr ""
+
+msgid "Create layout template"
+msgstr ""
+
+msgid "Layout template name"
+msgstr ""
+
+msgid "e.g. 3 columns layout"
+msgstr ""
+
+msgid "Template name is required"
+msgstr ""
+
+msgid "Layout type"
+msgstr ""
+
+msgid "Save template"
+msgstr ""
+
+msgid "Edit layout template"
+msgstr ""
+
+msgid "Replace layout with predefined type?"
+msgstr ""
+
+msgid "Page layout details"
+msgstr ""
+
+msgid "Loading layout..."
+msgstr ""
+
+msgid "Page layouts"
+msgstr ""
+
+msgid "Create layout"
+msgstr ""
+
+msgid "Manage templates"
+msgstr ""
+
+msgid "Are you sure you want to delete this layout?"
+msgstr ""
+
+msgid "Create page layout"
+msgstr ""
+
+msgid "You do not have permission to view this page"
+msgstr ""
+
+msgid "Why you want to delete your Legal Agreement"
+msgstr ""
+
+msgid "Delete Account"
+msgstr ""
+
+msgid "Go to Explore to find a topic of interest, or wait for someone to subscribe you"
+msgstr ""
+
+msgid "Data exchanges (GDPR)"
+msgstr ""
+
+msgid "Back to third parties"
+msgstr ""
+
+msgid "Add exchange"
+msgstr ""
+
+msgid "All users?"
+msgstr ""
+
+msgid "Add data exchange"
+msgstr ""
+
+msgid "Select users"
+msgstr ""
+
+msgid "Please select at least one user."
+msgstr ""
+
+msgid "Data exchange successfully saved."
+msgstr ""
+
+msgid "Error saving data exchange."
+msgstr ""
+
+msgid "Professional support"
+msgstr ""
+
+msgid "Add third party"
+msgstr ""
+
+msgid "Recruiter"
+msgstr ""
+
+msgid "Send data"
+msgstr ""
+
+msgid "Is recruiter?"
+msgstr ""
+
+msgid "Is used for data exchange?"
+msgstr ""
+
+msgid "Event"
+msgstr ""
+
+msgid "Go to session"
+msgstr ""
